--- a/.github/workflows/Generate-x86_64-23.05.x.yml
+++ b/.github/workflows/Generate-x86_64-23.05.x.yml
@@ -52,6 +52,8 @@ jobs:
         working-directory: ${{ env.VENDOR }}-imagebuilder-${{ env.VERSION }}-x86-64.Linux-x86_64
         run: |
           bash scripts/builder-patch-23.05.x.sh
+          bash scripts/clash.sh
+          bash scripts/zsh.sh
 
       - name: Generate Firmware
         working-directory: ${{ env.VENDOR }}-imagebuilder-${{ env.VERSION }}-x86-64.Linux-x86_64
